--- a/app/main/templates/main/about.html
+++ b/app/main/templates/main/about.html
@@ -3,10 +3,15 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static "deps/css/my_footer_css.css" %}">    
+    <link rel="stylesheet" href="{% static "deps/css/style.css" %}">
 {% endblock css %}
 
+
 {% block content %}
-    <h1 class="mt-5 pt-5"><strong> {{ content }}</strong></h1>
+    <div class="mt-5 pt-5 bac custom-shadow">
+    <h3 class="m-2"><strong> {{ content }}</strong></h3>
+    <h5 class = 'm-2'> {{ text_on_page }}</h5>
+    </div>
 {% endblock content %}
 
 {% block footer %} 
