--- a/app/main/templates/main/about.html
+++ b/app/main/templates/main/about.html
@@ -8,7 +8,7 @@
 
 
 {% block content %}
-    <div class="mt-5 pt-5 bac custom-shadow">
+    <div class="mt-5 pt-5 bac custom-shadow rounded">
     <h3 class="m-2"><strong> {{ content }}</strong></h3>
     <h5 class = 'm-2'> {{ text_on_page }}</h5>
     </div>
