--- a/app/goods/templates/goods/catalog.html
+++ b/app/goods/templates/goods/catalog.html
@@ -11,7 +11,7 @@
             Фильтры
         </button>
 
-        <form action="" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
+        <form action="{% url 'catalog:index' slug_url  %}" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
             <div class="form-check text-white mx-3">
                 <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on">
                 <input type="hidden" name="q" value="request.GET.q">
@@ -87,9 +87,7 @@
         <div class="custom-shadow d-flex">
             <li class="page-item {% if not goods.has_previous %}disabled {% endif %} ">
               <a class="page-link" href=" {% if  goods.has_previous  %}?page={{goods.previous_page_namber}}
-              {% else %}
-              #
-              {% endif %}">Назад</a>
+              {% else %}#{% endif %}">Назад</a>
             </li>
 
             {% for page in goods.paginator.page_range  %}
