--- a/app/goods/templates/goods/catalog.html
+++ b/app/goods/templates/goods/catalog.html
@@ -1,4 +1,4 @@
-{% extends "main/base.html" %}
+{% extends "base.html" %}
 {% load static  %}
 {% load goods_tags  %}
 
@@ -47,6 +47,13 @@
         </form>
     </div>
 
+    {% if request.GET.q %}
+        <h3 class="mt-4">Результаты поиска по запросу: "{{ request.GET.q }}"</h3>
+    {% if not goods %}
+        <h2 class="mt-4">По запросу ничего не найдено</h2>
+        <link rel="stylesheet" href="{% static "deps/css/my_footer_css.css" %}">    
+    {% endif %}
+    {% endif %}
 
     {% for product in goods %}
         <!-- Карта товара -->
@@ -59,9 +66,28 @@
                 {% endif %}
                 <div class="card-body">
                     <a href="{% url 'catalog:product' product.slug %}">
-                        <p class="card-title">{{ product.name }}</p>
+                        <p class="card-title"> 
+                        {% autoescape off %}
+                            {% if product.headline %}
+                            {{product.headline }}
+                            {% else %}
+                            {{ product.name }}
+                            {% endif %}
+                        {% endautoescape %} 
+                      
+                        </p>
                     </a>
-                    <p class="card-text">{{ product.description|truncatechars:45  }}</p>
+                    <p class="card-text">
+                        {% autoescape off %}
+                            {% if product.bodyline %}
+                            {{ product.bodyline|truncatechars:100 }}
+                            {% else %}
+                            {{ product.description|truncatechars:100 }}
+                            {% endif %}
+                        {% endautoescape %} 
+     
+                    
+                    </p>
                     <p class="product_id">id: {{ product.display_id }}</p>
                     <div class="d-flex justify-content-between">
                         
@@ -87,6 +113,7 @@
 
 </div>
 <!-- Пагинация -->
+{% if  goods %}
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center my-4">
         <div class="custom-shadow d-flex">
@@ -111,6 +138,8 @@
         </div>
     </ul>
 </nav>
+{% endif %}
+
 {% endblock content %}
 
 {% block footer %}
