--- a/app/users/templates/users/login.html
+++ b/app/users/templates/users/login.html
@@ -9,6 +9,7 @@
             <div class="col-md-6 bg-white p-4 mb-4 mx-3 rounded custom-shadow">
                 <h2 class="text-center mb-4">Авторизация</h2>
                 <form action="{% url 'user:login'  %}" method="post">
+                {% csrf_token %}
                 {{form}}
                     {% comment %} <div class="mb-3">
                         <label for="username" class="form-label">Имя пользователя</label>
