--- a/app/users/templates/users/login.html
+++ b/app/users/templates/users/login.html
@@ -10,15 +10,22 @@
                 <h2 class="text-center mb-4">Авторизация</h2>
                 <form action="{% url 'user:login'  %}" method="post">
                 {% csrf_token %}
-                {{form}}
-                    {% comment %} <div class="mb-3">
-                        <label for="username" class="form-label">Имя пользователя</label>
-                        <input type="text" class="form-control" id="username" placeholder="Введите ваше имя пользователя" required>
+                {% comment %} {% for item in form %}
+                     <div class="mb-3">
+                        <label for="{{item.id_for_label}}" class="form-label">{{item.label}}</label>
+                        {{item}}
+                    </div>
+                {% endfor %} {% endcomment %}
+              
+             
+                  <div class="mb-3">
+                        <label for="id_username" class="form-label">Имя пользователя</label>
+                        <input type="text" class="form-control" id="id_username" placeholder="Введите ваше имя пользователя" required>
                     </div>
                     <div class="mb-3">
-                        <label for="password" class="form-label">Пароль</label>
-                        <input type="password" class="form-control" id="password" placeholder="Введите ваш пароль" required>
-                    </div>{% endcomment %}
+                        <label for="id_password" class="form-label">Пароль</label>
+                        <input type="password" class="form-control" id="id_password" placeholder="Введите ваш пароль" required>
+                    </div>
                     <button type="submit" class="btn btn-dark btn-block">Войти</button> 
                 </form>
                 <div class="mt-3">
